Blog post image overflow fix

--- a/resources/assets/client/scss/pages/_blog-post.scss
+++ b/resources/assets/client/scss/pages/_blog-post.scss
@@ -14,4 +14,11 @@
   &_gallery {
     margin-bottom: 2 * $base-line;
   }
+
+  &_body {
+    img: {
+      max-width: 100% !important;
+      height: auto !important;
+    }
+  }
 }
